# FedNext

./: .gitignore  ARCHITECTURE.md  FedNext_Complete_Roadmap.txt  FedNext_Execution_Results.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.in
config/: default.yaml
data/cache/: federated_clients_cache_-2145398528835615848.pt  federated_clients_cache_-3013686382724037386.pt  federated_clients_cache_-3273381965642809339.pt  federated_clients_cache_-6323181767391749547.pt  federated_clients_cache_-7799803473677256995.pt  federated_clients_cache_6601058396657322410.pt  federated_clients_cache_6901475830262862077.pt  federated_clients_cache_7109132952097952798.pt  federated_clients_cache_8603156165956712814.pt
src/: client_main.py  evaluate.py  preprocess_shakespeare.py  preprocess_shakespeare_v2.py  server_main.py  train.py
src/data/: base_dataset.py  dataset.py
src/federated/: aggregation.py  client.py  server.py
src/network/: client_service.py  compression.py  protocol.proto  protocol_pb2.py  protocol_pb2_grpc.py  server_service.py
src/utils/: encryption.py  metrics.py
tests/: test_aggregation.py  test_federated.py  test_model.py
